# agent-tooling

./: .gitignore  HANG_DEBUG.md  LICENSE  README.md  hackathon.md
.dialec/: config.json  dialec.json  signal-schema.json
.dialec/capabilities/: claude.json  claudish.json  codex.json  cursor.json  gemini.json
.dialec/log/: activity.jsonl  decisions.jsonl  timeline.jsonl
.dialec/memory/: decisions.md  patterns.md  user-prefs.md
.dialec/roles/: adversary.md  arbiter.md  arch-lead.md  coordinator.md  designer.md  deslopper.md  implementer.md  meta-verifier.md  pm.md  qa.md  refactorer.md  researcher.md  spec-reviewer.md  spec-writer.md  verifier.md
.dialec/session/phase-spec/: draft-1.md  draft-2.md  draft-3.md  draft-4.md  draft-5.md  goal.md  review-1.md  review-2.md  review-3.md  review-4.md  review-5.md
.dialec/skills/: coordinator.md  sidecar.md
design-docs/: dialec.md
dialec/: .gitignore  Cargo.toml  README.md
dialec/scripts/: install-local.sh
dialec/src/: activity.rs  agent_team.rs  capabilities.rs  channel.rs  config.rs  fsutil.rs  git.rs  ledger.rs  main.rs  model.rs  orchestrator.rs  schema.rs  session.rs  status.rs  transaction.rs
