[package]
name = "dialec"
version = "0.1.0"
edition = "2024"
description = "Multi-harness orchestrator for structured agent collaboration"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
uuid = { version = "1", features = ["serde", "v4"] }
